paperIcon-alignment issue

--- a/src/assets/Content/Styles/editableField.less
+++ b/src/assets/Content/Styles/editableField.less
@@ -57,12 +57,18 @@ editable-field input[type=text].editable-field-input {
     }
 }
 .xrs-papericon {
-    font-size: 26px;
+    font-size: 28px;
     margin-left: 16px;
-    margin-top: 6px;
-    @media (max-width: 1024px) {
-        margin-top: 10px;
-         }
+    margin-top: 5px;
+    line-height: 100%;
+    display: none;
+    position: absolute;
+    margin-left: auto;
+    left: 20px !important;
+    top: 15%;
+    @media (max-width: 1023px) {
+        margin-top: 7px;
+    }
 }
 
 .xrx-paperclip {
