--- a/src/styles.less
+++ b/src/styles.less
@@ -48,26 +48,19 @@
 }
 
 
-
 .editable-field-input {
-   width: 93.6%;
-    border: none;
-    height: 100%;
-    padding: 0.965rem 1.25rem 0.965rem 2.25rem;
-    font-size: 25px;
-    outline: none;
-    vertical-align: middle;
-    border-radius: 3px;
-    @media (max-width: 1024px) {
-      margin-top: 3px;
-    }
-   
-    @media (min-width: 100px) and (max-width:900px) {
-      font-size: 24px;
-      width: 87%;
-      padding-bottom: 19px;
-    }
-  }
+  width: 100%;
+   border: none;
+   height: 62px;
+   padding: 0.965rem 1.25rem 0.965rem 2.25rem;
+   font-size: 28px;
+   outline: none;
+   vertical-align: middle;
+   border-radius: 3px;
+   @media (max-width: 1023px) {
+     height :68px;
+   }
+ }
 
 .mat-dialog-container{
   padding: 1px !important;
